--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css">
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="./js/responsiveslides.min.js"></script>
   <script>
     $(function () {
@@ -301,7 +301,7 @@
                       <a href="./contact.html">Contacts</a><br>
                     </div>
                     <div class="col-md-4" style="text-align:justify">
-                      <a href="http://www.childprotection.gov.lk/" target="_blank"><img class="img-responsive"
+                      <a href="https://www.childprotection.gov.lk/" target="_blank"><img class="img-responsive"
                           src="./images/ncpa.png">NCPA</a>
                     </div>
                   </div>
